# wanny

./: .dockerignore  .gitignore  .gitmodules  GEMINI.md  README.md  README.zh-CN.md  docker-compose.yaml
backend/: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  cleanup_pending.py  insert_mock_data.py  manage.py  pyproject.toml  pytest.ini
backend/apps/accounts/: apps.py  auth.py  middleware.py  models.py  test_utils.py  urls.py  views.py
backend/apps/brain/: apps.py  models.py  monitor.py
backend/apps/care/: apps.py  defaults.py  models.py  tasks.py  urls.py  views.py
backend/apps/comms/: ai.py  apps.py  bot_runtime.py  command_router.py  device_command_service.py  device_context_manager.py  device_intent.py  executor.py  initial_keywords.py  keyword_learner.py  keyword_loader.py  models.py  normalizer.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/apps/devices/: executor.py  models.py  queue.py  services.py  tests.py  urls.py  views.py
backend/apps/memory/: apps.py  models.py  review.py  services.py  tests.py  urls.py  vector_store.py  views.py
backend/apps/providers/: apps.py  auth_sessions.py  models.py  services.py  tests.py  urls.py  (+1 more)
backend/docs/: qweather-integration.md
backend/tests/: conftest.py  test_cleanup_pending.py  test_memory_vector_store.py  test_midea_api.py  test_mijia.py  test_mijia_capabilities.py  test_mijia_light_off.py  verify_mission_api.py
backend/utils/: crypto.py  http_logging_middleware.py  logger.py  telemetry.py
backend/wanny_server/: asgi.py  settings.py  urls.py  wsgi.py
(+193 files in other folders)
