[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "chromadb>=1.5.5",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-channels>=0.7.0",
    "google-genai>=1.69.0",
    "mijiaapi>=3.0.5",
    "mysqlclient>=2.2.8",
    "openai>=2.30.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.0.1",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
    "wechatbot-sdk>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
]
